force-app/main/default/objects/Match__c/Match__c.object-meta.xml
<CustomObject>
    <label>Match</label>
    <nameField>
        <displayFormat>Match-{0000}</displayFormat>
        <label>Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>