force-app/main/default/objects/Match__c/fields/Match_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Match_End_Time__c</fullName>
    <label>Match End Time</label>
    <summarizedField>Game__c.End_Time__c</summarizedField>
    <summaryForeignKey>Game__c.Match__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>