force-app/main/default/objects/Match__c/fields/Match_Start__c.field-meta.xml
<CustomField>
    <fullName>Match_Start__c</fullName>
    <label>Match Start</label>
    <summarizedField>Game__c.Start_Time__c</summarizedField>
    <summaryForeignKey>Game__c.Match__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>