force-app/main/default/objects/Match__c/fields/Number_of_Games__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Games__c</fullName>
    <label>Number of Games</label>
    <summaryForeignKey>Game__c.Match__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>