force-app/main/default/objects/Match__c/fields/Player_1__c.field-meta.xml
<CustomField>
    <fullName>Player_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player 1</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>