force-app/main/default/objects/Match__c/fields/Player_2__c.field-meta.xml
<CustomField>
    <fullName>Player_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player 2</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Matches (Player 2)</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>