force-app/main/default/objects/Match__c/fields/Player_2_Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Player_2_Total_Points__c</fullName>
    <label>Player 2 Total Points</label>
    <summarizedField>Game__c.Player_2_Score__c</summarizedField>
    <summaryForeignKey>Game__c.Match__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>