force-app/main/default/objects/Match__c/fields/Predicted_Winner__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Winner__c</fullName>
    <label>Predicted Winner</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>