force-app/main/default/objects/Match__c/fields/Tournament_2__c.field-meta.xml
<CustomField>
    <fullName>Tournament_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Is this part of a tournament?</inlineHelpText>
    <label>Tournament</label>
    <referenceTo>Tournament_2__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>