force-app/main/default/objects/Match__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <formula>IF( Player_1_Total_Points__c &gt;  Player_2_Total_Points__c,  &quot;Player 1&quot;, &quot;Player 2&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winner</label>
    <type>Text</type>
</CustomField>